# sift-app

./: AGENTS.md  CLAUDE.md  next.config.ts  package-lock.json  package.json  remove-bg.js
.commandcode/taste/: taste.md
.github/workflows/: release.yml  tauri-release.yml  test.yml
app/: globals.css  layout.tsx  page.tsx
app/analysis/: layout.tsx  page.tsx
app/clients/: page.tsx
app/epp/: page.tsx
app/istoric/: animations.ts  page.tsx  page.tsx.backup
app/report/: page.tsx
app/settings/: page.tsx
app/subgroups/: page.tsx
app/test/: page.tsx
app/ty-reports/: page.tsx
app/upload/: page.tsx
components/: Sidebar.tsx  ThemeProvider.tsx  UpdateBanner.tsx  UpdateChecker.tsx  UpdateDialog.tsx
components/History/: DatasetCard.tsx  FilterChips.tsx  SearchBar.tsx  StatsBar.tsx  TimelineNode.tsx  index.ts
components/Upload/: ColumnVisibilityPopover.tsx  DataTable.tsx  HistoricDataModal.tsx  UploadZone.tsx
lib/: chart-data.ts  chart-export.ts  dataset-tracking.ts  query-preview.ts  tauri.ts  theme-init.ts  update-check.ts
src-tauri/: Cargo.toml  subgroups_data.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: crop_icon.py  icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: analytics.rs  blend.rs  client_combinations.rs  data.rs  epp.rs  export.rs  formula.rs  ingest.rs  mod.rs  pivot.rs  queries.rs  report.rs  report.rs.backup  subgroups.rs  templates.rs  trends.rs  ty_reports.rs  updater.rs
src-tauri/src/db/: analysis.rs  mod.rs  schema.rs
types/: report.ts  subgroup.ts
upload/: q1 2026.xlsx
(+59 files in other folders)
