[package]
name = "sift"
version = "1.0.8"
description = "Sales & Reporting App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
calamine = { version = "0.26", features = ["dates"] }
rust_xlsxwriter = "0.80"
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tauri-plugin-shell = "2.3.5"
